added Our Donate Plne

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
     </header>
     <main>
+        <!-- donate-today -->
         <section class="donate-section">
             <div class="donate-today">
                 <h4 class="donate-title">Donate Today</h4>
@@ -35,6 +36,32 @@
             <button class="donet-btn btn">Donate Now</button>
             </div>
         </section>
+        <!-- Our Donate Plan -->
+         <section class="our-donate-plan">
+           <div class="donate-plan-section">
+            <div class="our-donate-item">
+                <h3 class="our-donate-title">Our Donate Plan</h3>
+                <p class="our-donate-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+            <div class="our-donate-card">
+                <div class="donate-card food">
+                    <img src="icon/food.png" alt="">
+                    <h4>Food for a family</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donate-card shelter">
+                    <img src="icon/Frame-1.png" alt="">
+                    <h4>Shelter for a family</h4>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+                <div class="donate-card Education">
+                    <img src="icon/shelter (1).png" alt="">
+                    <h4>Education for a child</h4>
+                   <p> Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                </div>
+            </div>
+           </div>
+         </section>
     </main>
 </body>
 </html>
