--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
             </div>
            </div>
          </section>
+         <!-- Your donation -->
+          <section class="Your-donation">
+          <div class="your-donation-section">
+             <div class="text-contant">
+                <h3>Their lives depend on your donation</h3>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                <button>How to Contribute?</button>
+             </div>
+             <div class="img-contant">
+                <img src="images/donation6.jpg" alt="">
+             </div>
+             </div>
+          </section>
     </main>
 </body>
 </html>
