added they need us to suvive

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
            </div>
          </section>
          <!-- Your donation -->
-          <section class="Your-donation">
+         <section class="Your-donation">
           <div class="your-donation-section">
              <div class="text-contant">
                 <h3>Their lives depend on your donation</h3>
@@ -75,6 +75,20 @@
                 <img src="images/donation6.jpg" alt="">
              </div>
              </div>
+         </section>
+         <!-- They need us to suvive -->
+          <section class="Your-donation">
+            <div class="your-donation-section2">
+                <div class="img-contant">
+                    <img src="images/donation7.jpg" alt="">
+                 </div>
+                <div class="text-contant">
+                   <h3>They need us to suvive</h3>
+                   <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                   <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+                   <button>How to Contribute?</button>
+                </div>
+                </div>
           </section>
     </main>
 </body>
