Donate site is Complet

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="donet-btn">Donate Now</button>
         </div>
     </header>
+    
     <main>
         <!-- donate-today -->
         <section class="donate-section">
@@ -80,9 +81,9 @@
           <section class="Your-donation">
             <div class="your-donation-section2">
                 <div class="img-contant">
-                    <img src="images/donation7.jpg" alt="">
+                    <img src="images/donation1.jpg" alt="">
                  </div>
-                <div class="text-contant">
+                <div class="text-contant2">
                    <h3>They need us to suvive</h3>
                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
@@ -90,6 +91,24 @@
                 </div>
                 </div>
           </section>
+          <!--  -->
+          <section class="get-updates-section">
+                <div class="Get-updates">
+                <h3>Get My Updates</h3>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+                </div>
+                 <div class="email-contant">
+                    <input class="email" type="email" placeholder="Email">
+                    <input class="submit" type="submit" value="Subscribe">
+                 </div>
+          </section>
     </main>
+
+    <footer>
+        <div class="humble">
+            <h4>Be Huble</h4>
+            <p>I’m gonna do it</p>
+        </div>
+    </footer>
 </body>
 </html>
